re PR rtl-optimization/8396 ([sparc] optimizer ICE)

PR optimization/8396
	* tree-inline.c (initialize_inlined_parameters): Make sure the value
	of read-only constant arguments is passed with the right type.

From-SVN: r64358